# CognitiveVision

CognitiveVision/: .gitignore
CognitiveVision/evaluation/SaliencyEvaluationTool/SaliencyEvaluationTool/: build.xml
CognitiveVision/evaluation/SaliencyEvaluationTool/SaliencyEvaluationTool/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
CognitiveVision/evaluation/SaliencyEvaluationTool/SaliencyEvaluationTool/nbproject/configs/: TEST_GroundTruthFILE.properties
CognitiveVision/evaluation/SaliencyEvaluationTool/SaliencyEvaluationTool/src/de/unibonn/informatik/ivs/set/: FileUtil.java  GroundTruth.java  GroundTruthDescription.java  ImageUtil.java  Main.java  SaliencyMap.java
CognitiveVision/src/: CMakeLists.txt  Exercise1.cpp  Exercise3.cpp  Exercise3_Pyr.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  ImagePyramid.cpp  ImagePyramid.h  LaplacianPyramid.cpp  LaplacianPyramid.h  OrientedPyramid.cpp  OrientedPyramid.h
